--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.RVActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="EpoxyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
